Revision history for {{$dist->name}}

{{$NEXT}}

1.50      2021-06-30 08:34:17 -0600
  - Production release identical to 1.49_01

1.49_01   2021-06-22 17:07:44 -0600
  - float gets promoted to double when used as a varadic argument
    (gh#323, gh#338)

1.48_01   2021-06-22 00:32:02 -0600
  - Test forks in CI (gh#333, #334, #335)
  - Internal refactor of pointer and array input arguments to reduce
    duplication (gh#336)

1.47_01   2021-06-21 22:24:40 -0600
  - Restore experimental code from 1.45_01

1.46      2021-06-21 22:20:12 -0600
  - Hotfix due to testing bug in 1.44 (gh#333)
  - This version does not include experimental code from 1.45_01.

1.45_01   2021-06-21 18:23:17 -0600
  - Experimental: with api => 2, you can now pass an array reference to
    a pointer argument, which is roughly equivalent to an array type with
    no size, example: sint[] (gh#227, gh#332)

1.44      2021-06-20 06:50:03 -0600
  - Migrate test suite to Test::V0 (gh#327)
  - Use parent instead of base in documentation and in code (gh#239 jjatria++)
  - Improved consistency of examples and documentation (gh#328, gh#330, jjatria++)

1.43      2021-03-17 09:46:40 -0600
  - Fix test hang on cygwin (gh#320, gh#321)

1.42      2021-03-15 05:42:23 -0600
  - Production release identical to 1.41_01

1.41_01   2021-03-14 12:49:38 -0600
  - Adjusted test introduced in 1.40_01 to not rely on returning
    a record-value for platforms that do not support that.  (gh#318, gh#319)

1.40_01   2021-03-12 13:08:41 -0700
  - Add support for closures returning records pass-by-value
    if they do not include string pointers (gh#313, gh#315)

1.39_01   2021-03-09 17:38:37 -0700
  - Fix bug where closure ABI wasn't being used for non-default
    ABIs (gh#313, gh#314)
  - Add support for closures taking records pass-by-value (gh#312)

1.38      2021-03-08 17:13:15 -0700
  - Production release identical to 1.37_01

1.37_01   2021-03-06 14:03:35 -0700