@@ -6,7 +6,7 @@ use FFI::Build;
 use FFI::Build::Platform;
 use Capture::Tiny qw( capture_merged );
 
-plan skip_all => 'Test requires C++ compiler'
+skip_all 'Test requires C++ compiler'
   unless eval { FFI::Build::Platform->which(FFI::Build::Platform->cxx) };
 
 subtest 'basic' => sub {
