@@ -142,7 +142,7 @@ subtest 'records' => sub {
         47,
       );
       subtest 'return-value' => sub {
-        plan skip_all => 'test requires working return records-by-value'
+        skip_all 'test requires working return records-by-value'
         unless $return_ok;
 
         is(
